# qlik-python-sdk

./: .gitignore  README.md  exemple.env  pyproject.toml
src/: appOpen.py  app_do_reload.py  app_get_sheet_list.py  app_publish.py  aut.py  get_app_info.py  get_app_list.py  get_app_sheet_list.py  teste.py  testes_gerais.py  user_get_me.py
