[tool.poetry]
name = "qlik-python-sdk"
version = "0.1.0"
description = ""
authors = ["rodrigo ubuntu <digaosss70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
qlik-sdk = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
